# freelook

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: node.js.yml  release.yml
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  menu.rs  network.rs  tray.rs  windows.rs
src/controller/: login-controller.js  mail-window-controller.js  menu-controller.js  setting-controller.js  tray-controller.js
src/css/: setting.css
src/js/: css-injector.js  login.js  preload.js  setting.js  splash.js
src/ts/: css-injector.ts  login.ts  setting.ts  splash.ts  tauri.d.ts
src/view/: error.html  login.html  setting.html  splash.html
