[package]
name = "freelook"
version = "2.0.0"
description = "Outlook desktop application"
authors = ["Howard Ju <howard.ju@outlook.com>"]
license = "MIT"
repository = "https://github.com/eNkru/freelook"
edition = "2021"

[lib]
name = "freelook_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls"] }
tokio = { version = "1", features = ["time"] }
url = "2"
image = "0.25"
